k8s/ingress.yaml
#...Ingress YAML file
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-challenge-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: entrypoint
                port:
                  number: 8080
